Changelog
=========


1.7 (unreleased)
----------------

- Add explicit support of Django 1.8, 1.9, 1.10, 1.11
- Remove django-templateaddons contrib


1.6 (2016-09-29)
----------------

- Filter fields having the HTML attribute "data-auto-submit" set to "no" do not
  trigger a page reload when modified.

1.5 (2016-09-23)
----------------

- Add stacked fields


1.4 (2015-06-22)
----------------

- Remove the distinct on queryset. It's the responsability of the app
  using generic-filters to do the distinct if needed


1.3 (2015-06-01)
----------------

- Generate and add an id on filter choices.


1.2 (2015-05-11)
----------------

- Handle all filter when using default filter.


1.1 (2015-04-16)
----------------

- Fix the default filter for submit part.
- Use tox.


1.0 (2015-01-29)
----------------

- Add support of a default filter.


0.12 (2015-01-14)
-----------------

- Add support of checkbox.
- Fix test.

0.11 (2014-09-08)
-----------------

- Fix pypi release.



0.10 (2014-08-19)
-----------------

- Add a new attribute to manage condition.
- Reviwed readme.


0.9 (2014-07-18)
----------------

- Fix filter list pagination
- Fix travis-ci test suite

0.8 (2014-04-17)
----------------

- Remove support of the pagination.


0.7 (2014-02-25)
----------------

- Warning remove order_by_list which was merged with default_order
- Is form submitted return True when the request method is GET and have data in request.
- Adding form_empty method.


0.6.1 (2014-02-21)
------------------

- Missing files.


0.6 (2014-02-21)
----------------

- Fix order_by and order_reverse.
- Fix is_form_submitted method.
- Refactoring.


0.5 (2014-02-06)
----------------

- FilteredForm now use the mixins.
- Improve documentation
- Implement the get_qs_filter method
- FilterFields list view


0.4 (2013-10-01)
----------------

- Search for each terms instead of searching for the full string in order.
- Let use redefine the All value
- Allow html in choice labels