@@ -1,11 +1,36 @@
 language: python
+matrix:
+    include:
+        - python: 2.7
+          env: TOX_ENV=py27-django18
+        - python: 2.7
+          env: TOX_ENV=py27-django19
+        - python: 2.7
+          env: TOX_ENV=py27-django110
+        - python: 2.7
+          env: TOX_ENV=py27-django111
+
+        - python: 3.4
+          env: TOX_ENV=py34-django18
+        - python: 3.4
+          env: TOX_ENV=py34-django19
+        - python: 3.4
+          env: TOX_ENV=py34-django110
+        - python: 3.4
+          env: TOX_ENV=py34-django111
+
+        - python: 3.5
+          env: TOX_ENV=py35-django18
+        - python: 3.5
+          env: TOX_ENV=py35-django19
+        - python: 3.5
+          env: TOX_ENV=py35-django110
+        - python: 3.5
+          env: TOX_ENV=py35-django111
+
+        - python: 2.7
+          env: TOX_ENV=flake8
+script:
+    - tox -e $TOX_ENV
 install:
     pip install tox
-env:
-    matrix:
-        - TOXENV=py27-django18
-        - TOXENV=py27-django19
-        - TOXENV=py27-django110
-        - TOXENV=py27-django111
-        - TOXENV=flake8
-script: make test
