@@ -5,12 +5,14 @@
 
 [tox]
 envlist =
-    py27-django{18,19,110,111},
+    py{27,34,35}-django{18,19,110,111},
     flake8
 
 [testenv]
 basepython =
     py27: python2.7
+    py34: python3.4
+    py35: python3.5
 deps =
     django18: Django>=1.8,<1.9
     django19: Django>=1.9,<1.10
